# nicetrace

./: LICENSE  README.md  pyproject.toml
browser/: build_for_python.sh
browser/traceview/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
browser/traceview/src/: App.css  App.tsx  main.tsx
browser/traceview/src/common/: complexity.ts  icons.tsx  time.tsx
browser/traceview/src/components/: DataRenderer.tsx  NodeDetail.css  NodeDetail.tsx  NodeView.css  NodeView.tsx  SummaryList.css  SummaryList.tsx  SummaryPage.tsx  TracePage.tsx  TreeView.css  TreeView.tsx
browser/traceview/src/model/: Node.ts  Node.tsx  Summary.ts
docs/: index.md  install.md  integrations.md  serialization.md  tracing.md  view.md
latest/: 404.html  index.html
latest/api/: index.html  nicetrace.html  search.js
latest/api/nicetrace/: server.html
latest/install/: index.html
latest/integrations/: index.html
latest/search/: search_index.json
latest/serialization/: index.html
latest/tracing/: index.html
latest/view/: index.html
src/nicetrace/: __init__.py  filewriter.py  serialization.py  tracing.py  writer.py
src/nicetrace/data/: blob.py  html.py
src/nicetrace/ext/: graphviz.py  langchain.py  pyplot.py
src/nicetrace/html/: staticfiles.py  statichtml.py
src/nicetrace/html/static/: index-89od9h17.js  index-BGXPyy5H.css  index-BOx9Kws5.css  index-BZXa_s7p.js  index-BituIyzO.js  index-BmQr6TlY.js  index-Br0oA2xM.css  index-BupuF-VS.css  index-CrtjrcV2.js  index-DFgE6Thu.js  index-DhSU_SMS.css  index-DoqnF80a.js  index-Dy-mRr-3.js  index-UldCyfPa.css  index-vuqNik9P.css  index.html
src/nicetrace/reader/: base.py  filereader.py
src/nicetrace/server/: __init__.py  __main__.py  app.py
src/nicetrace/utils/: ids.py
src/nicetrace/writer/: base.py  filewriter.py
tests/: test_html.py  test_reader.py  test_serialize.py  test_tracing.py  test_writer.py  testutils.py
