[tool.poetry]
name = "nicetrace"
version = "0.1.0"
description = ""
authors = ["Ada Bohm <ada@kreatrix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = {version = "^3.0.3", optional = true}
flask-cors = {version = "^4.0.1", optional = true}
waitress = {version = "^3.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
server = ["flask", "flask-cors", "waitress"]