[tool.poetry]
name = "nicetrace"
version = "0.4.1"
description = ""
authors = ["Ada Bohm <ada@kreatrix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = {version = "^3.0.3", optional = true}
flask-cors = {version = "^4.0.1", optional = true}
waitress = {version = "^3.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
requests = "^2.32.3"
ruff = "^0.5.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
mkdocs-minify-plugin = "^0.8.0"
mike = "^2.1.2"
mkdocs-pdoc-plugin = { git = "https://github.com/spirali/mkdocs-pdoc-plugin.git", branch = "main" }
pdoc = "^14.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
server = ["flask", "flask-cors", "waitress"]
