[project]
name = "nicetrace"
version = "0.4.10"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Ada Bohm", email="ada@kreatrix.org"}]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "browser",
  "mytests",
  "*.ipynb",
  "traces",
  "site",
]

[project.optional-dependencies]
server = [
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "waitress>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "mike>=2.1.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mkdocs-material>=9.5.36",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs>=1.6.1",
    "pdoc>=14.7.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.6.7",
]
